# tilepy

./: .DS_Store.REMOVED.git-id  .codespell-ignore-words  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  927563_lalinference.fits.gz.REMOVED.git-id  CITATION.cff  CITATION.md  CLA.md  LICENSE.rst  LICENSE.rst.REMOVED.git-id  Pointing_PGWonFoV.py  Pointing_PgalonFoV.py  README.md  Visibility_Overview.png.REMOVED.git-id  cite_dependencies.py  codemeta.json  environment.yml  index.html  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: black.yml  ci.yml  cla.yml  deploy.yml  flake8.yml
__pycache__/: CubeSimulation.cpython-36.pyc.REMOVED.git-id
configs/: PGWinFoV.ini  PGalinFoV.ini
dataset/: .DS_Store.REMOVED.git-id  BNS-GW-Time_onAxis5deg.txt  BNS-GW-Time_onAxis5deg.txt.REMOVED.git-id  BNS-GW-new.txt.REMOVED.git-id  BNS-GW.txt  BNS-GW_onAxis5deg.txt  BNS-GW_onAxis5deg.txt.REMOVED.git-id  converted_Glade.h5.REMOVED.git-id
dataset/GalaxyCatalogs/: run0001_galaxylist.txt.REMOVED.git-id  run0002_galaxylist.txt.REMOVED.git-id  run0003_galaxylist.txt.REMOVED.git-id  run0004_galaxylist.txt.REMOVED.git-id
docs/: conf.py  index.rst  refs.bib  search.html
examples/: Launch_SingleTelescope_Tiling_GBM.py  Launch_SingleTelescope_Tiling_GW.py  README.md  README.me  Tiling_Observations.ipynb  Tiling_Observations.ipynb.REMOVED.git-id  Tiling_Observations.py  Tiling_Observations_LST.ipynb.REMOVED.git-id  Tiling_Observations_Nobs.ipynb  Tiling_Observations_Nobs.ipynb.REMOVED.git-id  Tiling_Observations_Nobs.py  bayestar.multiorder.fits,0.REMOVED.git-id  bayestar.multiorder.fits,1,  bayestar.multiorder.fits,1.REMOVED.git-id
include/: AnalysisTools.py  AnalysisTools_dev.py  GWCTAObservationScheduler.py  GWCTAObservationScheduler.py.REMOVED.git-id  GWCTAPointingTools.py  GWCTAPointingTools.py.REMOVED.git-id  ObservingTimes.py  ObservingTimes.py.REMOVED.git-id  ObtainObservingTimes.py  SimulationTools.py  SimulationTools.py.REMOVED.git-id  SimulationTools_dev.py  SimulationTools_dev.py.REMOVED.git-id  gwUtilities.py
relics/: InsideRegion_UNIQ.py  PerformanceSimulation_PGalinFoV.py  SimulationTools.py  SimulationTools.py.REMOVED.git-id
testFiles/: ExamplePointing.txt  SuggestedPointings_GALOptimisation-test.txt  obstime_test.txt
tests/: conftest.py  test_ObservationScheduler.py  test_cases.json
tools/: 3DComparison.py  Comparison_CoveringSourceCoordinates.py  GetObservationTimeThroughTransit.py  GetRandomInjectionTime_DecideObs.py  PlotScheduling.py  testTime.py
(+2074 files in other folders)
